--- a/app/src/main/res/values/query.xml
+++ b/app/src/main/res/values/query.xml
@@ -2,5 +2,5 @@
 <resources>
 
     <string name="queryObtenerAnimalDadaRegion">select * from animales where region=</string>
-
+    <string name="queryObtenerRegionXLocalizacion">select * from Localizacion where </string>
 </resources>
