--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="120dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="80dp"
+        android:backgroundTint="@color/colorBotones"
         android:text="ir"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +26,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="120dp"
         android:layout_marginBottom="80dp"
+        android:backgroundTint="@color/colorBotones"
         android:text="atras"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
