--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/logoImageView"
         android:layout_width="225dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/ude"
+        android:src="@drawable/udeback"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +36,7 @@
         android:layout_width="144dp"
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
+        android:backgroundTint="@color/colorBotones"
         android:text="CrearBD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,6 +48,7 @@
         android:id="@+id/button"
         android:layout_width="144dp"
         android:layout_height="48dp"
+        android:backgroundTint="@color/colorBotones"
         android:text="Ver macaco"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +61,7 @@
         android:layout_height="49dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/colorBotones"
         android:text="Bienvenida"
         app:icon="@android:drawable/btn_star_big_on"
         app:iconTint="#FFEB3B"
