--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/logoImageView"
         android:layout_width="225dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/udeback"
+        android:src="@drawable/raeco"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
