Falta cargar en la base de datos una nueva tabla con animales extintos. Ya se crearon las funciones

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,10 +46,10 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="144dp"
-        android:layout_height="48dp"
+        android:layout_width="173dp"
+        android:layout_height="55dp"
         android:backgroundTint="@color/colorBotones"
-        android:text="Ver macaco"
+        android:text="Extra"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
     <Button
         android:id="@+id/bienvenida"
         android:layout_width="173dp"
-        android:layout_height="49dp"
+        android:layout_height="55dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/colorBotones"
