--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -8,29 +8,27 @@
 
     <Button
         android:id="@+id/ir"
-        android:layout_width="120dp"
+        android:layout_width="140dp"
         android:layout_height="49dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginBottom="80dp"
         android:backgroundTint="@color/colorBotones"
         android:text="ir"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/atras"
-        android:layout_width="120dp"
+        android:layout_width="140dp"
         android:layout_height="49dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@color/colorBotones"
         android:text="atras"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
