--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -61,7 +61,7 @@
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="80dp"
         android:backgroundTint="@color/colorBotones"
-        android:text="Ecoturismo"
+        android:text="ANIMALES"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
