--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -97,7 +97,8 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/colorBotones"
-        android:text="Atras"
+        android:textAlignment="center"
+        app:icon="?attr/homeAsUpIndicator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
